<resources>
    <string name="app_name">My Lawyer App</string>
    <string name="t6_font_bold">fonts/googlesansbold.ttf</string>
    <string name="t6_font_semi_bold">fonts/googlesansMedium.ttf</string>
    <string name="t6_font_medium">fonts/googlesansMedium.ttf</string>
    <string name="t6_font_regular">fonts/googlesansregular.ttf</string>
    <string name="theme3_font_semi_bold">theme3fonts/googlesansMedium.ttf</string>

    <string name="theme11_lbl_tos">Terms of Service</string>
    <string name="theme11_lbl_sample_long">
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
    </string>
    <string name="t11_note_toc">I agree with the terms and conditions</string>
    <string name="t6_hi_juila">Hi Juila!</string>
    <string name="t6_you_are_in_54_king_ports">you are in 54 king ports</string>
    <string name="t6_best_destination">Best Destination</string>
    <string name="t6_get_started">Get Started</string>
    <string name="t6_skip_for_now">Skip For Now</string>
    <string name="t6_trip_go">lq.travel</string>
    <string name="theme6_samplelong_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.dummy text of the printing and typesetting </string>
    <string name="t6_hotels">Hotels</string>
    <string name="t6_login">Login</string>
    <string name="t6_search_nearby_destination">Search Nearby Destination</string>
    <string name="t6_recent_search">Recent Search</string>
    <string name="t6_clear_all">Clear all</string>
    <string name="t6_popular_destination">Popular Destination</string>
    <string name="t6_name">Full Name</string>
    <string name="t6_confirm_password">Confirm Password</string>
    <string name="t6_password">Password</string>
    <string name="t6_email">Email</string>
    <string name="theme3_lbl_bottom_naivgation">Bottom Navigation</string>
    <string name="t6_sign_up">Sign Up</string>
    <string name="t6_address">Address</string>
    <string name="t6_best_hotels">Best Hotels</string>
    <string name="t6_see_all">see all</string>
    <string name="t6_popular_hotels">Popular Hotels</string>
    <string name="t6_baggar_fee_information">Baggar Fee Information</string>
    <string name="baggar_fee_information">Baggar Fee Information</string>
    <string name="t6_airline">Airline</string>
    <string name="t6_emirates_airlines">Emirates Airlines</string>
    <string name="t6_carry_on_bag">Carry on Bag</string>
    <string name="t6_fee_free_up_to_15_kg">Fee free up to 15 kg</string>
    <string name="t6__1st_bag">1st Bag</string>
    <string name="t6__2nd_bag">2nd Bag</string>
    <string name="t6_got_it">got it</string>
    <string name="t6_forgot_password">Forgot Password?</string>
    <string name="t6_login_with_google">Login with Google</string>
    <string name="t6_login_with_facebook">Login with Facebook</string>
    <string name="t6_login_with_apple">Login with Apple</string>
    <string name="t6_or">or</string>
    <string name="t6_select_rorm">Select Room</string>
    <string name="t6_hotel_information">Hotel Information</string>
    <string name="t6_1298_reviews">1298 Reviews</string>
    <string name="t6_4_5_5_good">4.5/5 - Good</string>
    <string name="t6__120">$120</string>
    <string name="t6_breakfast">Breakfast</string>
    <string name="t6_parking">Parking</string>
    <string name="t6_per_night">Per Night</string>
    <string name="t6_140">$140</string>
    <string name="t6_description">Located in the famous and  and   bohemian neighbourhood of Santa Teresa, Sugar Loft is set in a building built in the 1930s and since then completely modernised.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t12_font_bold">theme12fonts/googlesansbold.ttf</string>
    <string name="t12_font_medium">theme12fonts/googlesansmedium.ttf</string>
    <string name="t12_font_regular">theme12fonts/googlesansregular.ttf</string>
    <string name="t12_font_semi_bold">theme12fonts/googlesansmedium.ttf</string>
    <string name="t12_lbl_get_started">Get Started</string>
    <string name="t12_hint_Email">Email</string>
    <string name="t12_hint_password">Password</string>
    <string name="t12_hint_confirm_password">Confirm Password</string>
    <string name="t12_lbl_sign_up">Sign Up</string>
    <string name="t12_lbl_already_member">Already have an account?</string>
    <string name="t12_lbl_login">Login</string>
    <string name="t12_lbl_need_an_account">Don\'t have an account?</string>
    <string name="t12_lbl_forgot_your_password">Forgot Password?</string>
    <string name="t12_lbl_retrieve">Retrieve</string>
    <string name="t12_lbl_search">Search</string>
    <string name="t12_lbl_bookmark">Bookmark</string>
    <string name="t12_lbl_user">User</string>
    <string name="t12_lbl_setting">Setting</string>
    <string name="t12_lbl_featured_cities">Featured cities</string>
    <string name="t12_lbl_popular_properties">Popular Properties</string>
    <string name="t12_lbl_for_sale">For Sale</string>
    <string name="t12_lbl_country">country</string>
    <string name="t12_lbl_canada">Canada</string>
    <string name="t12_lbl_currency">currency</string>
    <string name="t12_lbl_cad">Cad</string>
    <string name="t12_lbl_privacy_policy">privacy policy</string>
    <string name="t12_lbl_support_amp_faqs"><![CDATA[support & faqs]]></string>
    <string name="t12_lbl_change_password">Change Password</string>
    <string name="t12_lbl_logout">Logout</string>
    <string name="t12_lbl_apply">Apply</string>
    <string name="t12_lbl_low_to_high_s">Low to high (s)</string>
    <string name="t12_lbl_high_to_low_s">high to low (s)</string>
    <string name="t12_lbl_date_posted_new_to_old">Date Posted (New to old)</string>
    <string name="t12_lbl_date_posted_old_to_new">Date Posted (old to new)</string>
    <string name="t12_lbl_distance_to_your_location">distance to your location</string>
    <string name="t12_hint_city">City</string>
    <string name="t12_hint_from">From</string>
    <string name="t12_hint_to">To</string>
    <string name="t12_lbl_update">Update</string>
    <string name="t12_lbl_size">Size</string>
    <string name="t12_lbl__1">1</string>
    <string name="t12_lbl_bathrooms">Bathrooms (#)</string>
    <string name="t12_lbl_bedrooms">Bedrooms (#)</string>
    <string name="t12_lbl_types_of_property">Types of property</string>
    <string name="t12_lbl_price">Price</string>
    <string name="t12_lbl__13_miles">13 miles</string>
    <string name="t12_lbl_search_within">Search within</string>
    <string name="t12_lbl_call">Call</string>
    <string name="t12_lbl_bookmarks">Bookmarks</string>
    <string name="t12_lbl_last_watched">Last Watched</string>
    <string name="t12_lbl_login_with">Login With</string>
    <string name="t12_username">Jessica Doe</string>
    <string name="t12_user_email">Jessica@gmail.com</string>
    <string name="t12_lbl_properties">Properties</string>
    <string name="t12_20">20</string>
    <string name="t12_150">150</string>
    <string name="t12_lbl_followers">Followers</string>
    <string name="t12_lbl_sample_long">
Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
    </string>
    <string name="t12_lbl_simple_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="t12_lbl_address">Address</string>
    <string name="t12_lbl_description">Description</string>
    <string name="t12_lbl_types_of_properties">Types of properties</string>
    <string name="t12_lbl_house">House</string>
    <string name="t12_lbl_storeys">storeys</string>
    <string name="t12_lbl_photos">photos</string>
    <string name="t12_lbl_2">2</string>
    <string name="t12_lbl_for_rent">For rent</string>
    <string name="t12_lbl_profile">profile</string>
    <string name="t12_lbl_filter">Filters</string>
    <string name="t12_lbl_cards">Cards</string>
    <string name="t12_lbl_list">List</string>
    <string name="t12_lbl_buy">Buy</string>
    <string name="t12_lbl_rent">Rent</string>
    <string name="t12_lbl_bottom_navigation">Bottom Navigation</string>
    <string name="t12_lbl_search_nearest_properties">Search Nearest Properties</string>
    <string name="t12_lbl_last_search">Last Search</string>
    <string name="t12_lbl_popular_cities">Popular cities</string>
    <string name="t12_lbl_bali">Bali</string>
    <string name="t12_lbl_3_bedroom">3 Bedroom</string>
    <string name="t12_lbl_3_bathroom">3 Bathroom</string>
    <string name="t12_lbl_owner">Owner</string>
    <string name="t12_2_440">$2.440</string>
    <string name="t12_lbl_green_house_nw_pool">Green House  \nw/Pool</string>
    <string name="t12_lbl__3_beds">3 beds</string>
    <string name="t12_lbl_1_baths">1 Baths</string>
    <string name="t12_20_sqm">20 sqm</string>
    <string name="t12_lbl_link_sign_up"><a href="#">Sign Up</a></string>
    <string name="t12_lbl_link_login"><a href="#">Login</a></string>
    <string name="search">Search</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="next">Next</string>
    <string name="service_provider_details">Service Provider Details</string>
    <string name="chamber">Chamber</string>
    <string name="years_of_experience">Years Of Experience</string>
    <string name="state_justification">State Justification</string>
    <string name="roll_call_number">Roll Call Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="upload_your_picture">Upload your picture</string>
    <string name="address">Address</string>
    <string name="please_type_your_answers_here">Please type your answers here</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="crimanal_law">Criminal law</string>
    <string name="first_name">First name: </string>
    <string name="adewole_opeyemi">Adewole Opeyemi</string>
    <string name="last_name">Last name:</string>
    <string name="budget">Budget:</string>
    <string name="bullet_point">Bullet Point:</string>
    <string name="status">Status:</string>
</resources>
