<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llTOC"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvToc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/theme11_spacing_large"
                android:layout_marginEnd="@dimen/theme11_spacing_large"
                android:layout_marginTop="@dimen/theme11_spacing_xlarge"
                android:textSize="@dimen/theme11_font_size_xlarge"
                android:textAppearance="@style/Theme11FontSemiBold"
                android:textColor="@color/theme11_textColorPrimary"
                android:text="@string/theme11_lbl_tos" />

            <TextView
                android:id="@+id/tvTocText"
                android:layout_weight="1"
                android:text="@string/theme11_lbl_sample_long"
                android:layout_marginTop="@dimen/theme11_spacing_large"
                android:lineSpacingExtra="@dimen/theme11_spacing_control"
                android:layout_marginStart="@dimen/theme11_spacing_standard_new"
                android:layout_marginEnd="@dimen/theme11_spacing_standard_new"
                android:maxLines="15"
                android:textSize="@dimen/theme11_font_size_normal"
                android:alpha="0.5"
                android:singleLine="false"
                android:textColor="@color/theme11_textColorSecondary"
                style="@style/Theme11EditText" />

            <LinearLayout
                android:id="@+id/llBottom"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <CheckBox
                    android:id="@+id/checkbox_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t11_note_toc"
                    android:textSize="@dimen/theme11_font_size_normal"
                    android:layout_marginStart="@dimen/theme11_spacing_standard_new"
                    android:layout_marginEnd="@dimen/theme11_spacing_standard_new"
                    android:textColor="@color/theme11_colorPrimary"
                    android:layout_marginTop="@dimen/theme11_spacing_middle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme11MaterialButtonStyle.Filled"
                    android:layout_marginStart="@dimen/theme11_spacing_standard_new"
                    android:layout_marginEnd="@dimen/theme11_spacing_standard_new"
                    android:layout_marginTop="@dimen/theme11_spacing_middle"
                    android:layout_marginBottom="@dimen/theme11_spacing_large"
                    android:textAppearance="@style/Theme11FontMedium"
                    android:paddingStart="@dimen/theme11_spacing_xxlarge"
                    android:paddingEnd="@dimen/theme11_spacing_xxlarge"
                    android:text="@string/complete_registration" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>