<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/assistant_light"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/T6ViewColor" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:passwordToggleEnabled="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/assistant_light"
                android:hint="@string/t6_password"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/T6ViewColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp"
            android:fontFamily="@font/assistant_light"
            android:text="@string/t6_forgot_password" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_16sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/t6_login"
        android:backgroundTint="#40000000"
        style="@style/Theme6MaterialButtonStyle"
        android:textAppearance="@style/Theme6FontMedium"
        android:textSize="@dimen/t6_font_normal"
        android:textAllCaps="false" />
</RelativeLayout>